--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,10 @@
   </head>
 
   <body>
-    <%= yield %>
-    <%= javascript_include_tag "application" %> <!-- from app/assets/javascripts/application.js -->
+    <%= render 'shared/navbar' %>
+       <%= yield %>
+    <%= javascript_include_tag "application" %>
     <%= javascript_pack_tag "application" %>
+    </div>
   </body>
 </html>
