--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,8 +1,8 @@
 // Specific CSS for your home-page
-.container{
+body{
   background-color: #171C4D;
 }
 
-.create{
-
+.container{
+  background-color: #F5F5F5;
 }
