--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,5 @@
 // Specific CSS for your home-page
+@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
 body{
   background-color: #171C4D;
 }
@@ -6,3 +7,15 @@ body{
 .container{
   background-color: #F5F5F5;
 }
+
+.card{
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 0 3px rgba(0,0,0,0.3);
+  color: #171C4D;
+  font-family: 'Lobster', ;
+  font-size: 25;
+  text-align: center;
+}
+
+
