--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -9,7 +9,7 @@
     <div class="row justify-content-center">
       <div class="col-8 p-3 d-flex justify-content-center">
         <% @cocktails.each do |cocktail|  %>
-          <div class="card m-4" style="width: 18rem; height">
+          <div class="card m-4 justify-content-center" style="width: 18rem;">
             <img src="https://images.unsplash.com/photo-1556855810-ac404aa91e85?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="card-img-top">
             <div class="card-body">
               <p class="card-text"> <%= link_to cocktail.name, cocktail_path(cocktail) %></p>
