--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to "/", class: "navbar-brand" do %>
     <%= image_tag "https://image.freepik.com/vecteurs-libre/bar-cocktails-neon-texte-boire-paille-cerises_1262-19509.jpg", height: 70, class: "rounded-circle" %>
     <% end %>
 
