--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -10,7 +10,11 @@
       <div class="col-8 p-3 d-flex justify-content-center">
         <% @cocktails.each do |cocktail|  %>
           <div class="card m-4 justify-content-center" style="width: 18rem;">
-            <img src="https://images.unsplash.com/photo-1556855810-ac404aa91e85?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="card-img-top">
+            <% if  cocktail.photo.attached? %>
+              <%= cl_image_tag cocktail.photo.key, height: 300, width: 400, crop: :fill, class: "card-img-top" %>
+            <% else %>
+              <%= image_tag "guigui.jpg", class: "card-img-top" %>
+            <% end %>
             <div class="card-body">
               <p class="card-text"> <%= link_to cocktail.name, cocktail_path(cocktail) %></p>
             </div>
