--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <%= link_to "All Cocktails", class: "nav-link" %>
+        <a href="https://www.youtube.com/watch?v=-keUgSnQM3c">Y a pas de panneau!</a>
       </li>
     </ul>
   </div>
