--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <meta name="description" content="C'est un jeu de mot tu trouveras pas de coque de tel sur cette page.">
+    <meta property="og:title" content="Coque tel">
+    <meta property="og:image" content="http://mister-coque-tel.cleverapps.io/">
+    <meta property="og:description" content="C'est un jeu de mot tu trouveras pas de coque de tel sur cette page.">
+    <meta property="og:site_name" content="Coque_Tel"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
