--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a href="https://www.youtube.com/watch?v=-keUgSnQM3c">Y a pas de panneau!</a>
+        <a href="https://www.youtube.com/watch?v=-keUgSnQM3c" target="_blank" class="btn btn-danger">Mettez du son<br>avant de cliquer!</a>
       </li>
     </ul>
   </div>
