--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,7 +3,7 @@
   <h1 class="font-weight-bold text-white title">Simpson character cocktail</h1>
 </div>
 
-<div class="container col-lg-10 pt-3">
+<div class="container col-8 pt-3">
   <%= link_to 'Create your custom cocktail', new_cocktail_path(@cocktail), class: "btn btn-primary" %>
   <div class="container">
     <div class="row justify-content-center">
